@@ -85,6 +85,20 @@
 	</dependencies>
 	<build>
 		<plugins>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-compiler-plugin</artifactId>
+				<version>3.11.0</version> <!-- or the latest version -->
+				<configuration>
+					<source>17.0.11</source> <!-- or your desired Java version -->
+					<target>17.0.11</target> <!-- or your desired Java version -->
+					<compilerArgs>
+						<arg>--add-exports=jdk.compiler/com.sun.tools.javac.processing=ALL-UNNAMED</arg>
+					</compilerArgs>
+				</configuration>
+			</plugin>
+
+
 			<!-- Default configuration for Surefire Plugin -->
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
